Limit parallel download to http GET requests.

Currently we have seen 405 error code in parallel download metrics.

And parallel download should be only used in GET requests since we
don't know how the server uses POST body data.

BUG=724690

Review-Url: https://codereview.chromium.org/2897743002
Cr-Commit-Position: refs/heads/master@{#474823}

Former-commit-id: 16ca9f743af85a9194b63b4585636d59b7c6bf53