content/browser/download/parallel_download_job.cc
@@ -209,6 +209,7 @@ void ParallelDownloadJob::CreateRequest(int64_t offset, int64_t length) {
       BrowserContext::GetStoragePartitionForSite(
           download_item_->GetBrowserContext(), download_item_->GetSiteUrl());
 
+  // The parallel requests only use GET method.
   std::unique_ptr<DownloadUrlParameters> download_params(
       new DownloadUrlParameters(download_item_->GetURL(),
                                 storage_partition->GetURLRequestContext()));
